started initialisation data retrieval

--- a/code/templates/data.html
+++ b/code/templates/data.html
@@ -17,18 +17,19 @@
       <!-- <a class="navbar-brand" href="/">WD</a> -->
       <a class="navbar-brand" href="/">
         <div class="logo-image">
-          <img src="/Whisky_Discography/image/WD1.PNG" class="img-fluid">
-    </div>
+          <img src="../static/image/WD1.PNG" class="img-fluid">
+      </div>
       </a
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
-          <a class="nav-link" href="/about">About Us</a>
-          <a class="nav-link" href="/data">Data </a>
-          <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link" href="/about">About Us</a>
+            <a class="nav-link" href="/data">Data </a>
+            <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
+          </div>
         </div>
       </div>
-    </div>
+    </div>  
   </nav>
 
   <div class="container">
