--- a/code/templates/about_us.html
+++ b/code/templates/about_us.html
@@ -28,7 +28,7 @@
       <!-- <a class="navbar-brand" href="/">WD</a> -->
       <a class="navbar-brand" href="/">
         <div class="logo-image">
-          <img src="/Whisky_Discography/image/WD1.PNG" class="img-fluid">
+          <img src="../static/image/WD1.PNG" class="img-fluid">
     </div>
       </a
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
