--- a/code/templates/data.html
+++ b/code/templates/data.html
@@ -43,6 +43,11 @@
   <div class="container"> 
     <table id="rawData" class="display" width="100%"></table>
   </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div id="bubble"></div>
+    </div>
+  </div>
 <script>
 
 </script>
