finalised listbuilder and getdata function

--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -63,6 +63,9 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <!-- install lodash -->
+  <!-- https://www.newline.co/@morfsys/you-should-start-using-lodash-in-2020-and-heres-why--792500b0 -->
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
   <!-- <script src="./static/js/app.js"></script> -->
 
 </body>
