--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -11,7 +11,8 @@
     <script src="https://code.highcharts.com/maps/modules/data.js"></script>
     <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/maps/modules/offline-exporting.js"></script>
-    <script src="https://code.highcharts.com/mapdata/custom/world.js"></script>
+    <!-- <script src="https://code.highcharts.com/mapdata/custom/world.js"></script> -->
+    <script src="./static/js/world.js"></script>
 </head>
 <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
