--- a/code/templates/explore.html
+++ b/code/templates/explore.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whisky Discography</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://code.highcharts.com/maps/highmaps.js"></script>
+    <script src="https://code.highcharts.com/maps/modules/data.js"></script>
+    <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/maps/modules/offline-exporting.js"></script>
+    <script src="../static/scripts/world.js"></script>
 </head>
 <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -42,7 +47,7 @@
         </div>
         <div class="panel panel-primary">
           <div class="panel-heading">
-            <h3 class="panel-title">Demographic Info</h3>
+            <h3 class="panel-title">Whisky Information by Country</h3>
           </div>
           <div id="sample-metadata" class="panel-body"></div>
         </div>
@@ -56,7 +61,7 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        <div id="bubble"> Bubbe goes here </div>
+        <div id="map" style="height: 500px; min-width: 310px; max-width: 800px; margin: 0 auto"></div>
       </div>
     </div>
   </div>
@@ -66,7 +71,7 @@
   <!-- install lodash -->
   <!-- https://www.newline.co/@morfsys/you-should-start-using-lodash-in-2020-and-heres-why--792500b0 -->
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
-  <script src="./static/js/app.js"></script>
+  <script src="./static/js/explore.js"></script>
 
 </body>
 </html>
