Updated README and added stats.html file

--- a/code/templates/explore.html
+++ b/code/templates/explore.html
@@ -24,8 +24,10 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="/">Home</a>
-              <a class="nav-link" href="/about">About Us</a>
-              <a class="nav-link" href="/data">Data </a>
+              <a class="nav-link" href="/stats">Statistics </a>
+              <a class="nav-link" href="/explore">Explore </a>
+              <a class="nav-link" href="/data">Distilleries </a>
+              <a class="nav-link" href="/about">Our Picks</a>
               <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
             </div>
           </div>
