--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -19,8 +19,11 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="/">Home</a>
-              <a class="nav-link" href="/about">About Us</a>
-              <a class="nav-link" href="/data">Data </a>
+              <a class="nav-link" href="/stats">Statistics </a>
+              <a class="nav-link" href="/explore">Explore </a>
+              <a class="nav-link" href="/data">Distilleries </a>
+              <a class="nav-link" href="/about">Our Picks</a>
+              
               <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
             </div>
           </div>
@@ -66,7 +69,7 @@
   <!-- install lodash -->
   <!-- https://www.newline.co/@morfsys/you-should-start-using-lodash-in-2020-and-heres-why--792500b0 -->
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
-  <script src="./static/js/app.js"></script>
+  <!-- <script src="./static/js/app.js"></script> -->
 
 </body>
 </html>
