--- a/code/templates/about_us.html
+++ b/code/templates/about_us.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whisky Discography</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -56,10 +57,11 @@
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="Screen Shot 2021-07-05 at 7.36.15 pm (3).png" class="d-block w-100" alt="...">
+            <img src="../static/image/ms2.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Alysha's Pick</h5>
               <p>Some works about me.</p>
@@ -67,7 +69,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="../static/image/ym1.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Heriewan's Pick</h5>
               <p>Some works about me.</p>
@@ -75,7 +77,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="../static/image/craig.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Matt's Pick</h5>
               <p>Some works about me.</p>
@@ -83,7 +85,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="../static/image/oban.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Stephanie's Pick</h5>
               <p>Some works about me.</p>
@@ -100,6 +102,74 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+    <!-- <div clas="cardcontainer">
+      <div class="row1 col-md-12">
+        <div class="card col-md-3"></div>
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="card col-md-3"></div>  
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>    
+      </div>    
+    </div>   -->
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="card ">
+       <img class="card-img-top" src="../static/image/alysha.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Alysha</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="https://www.monkeyshoulder.com" target="_blank" class="btn btn-primary">Explore More</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card" >
+        <img class="card-img-top" src="../static/image/matt.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Matt</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="https://www.craigellachie.com/" target="_blank" class="btn btn-primary">Explore More</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card">
+        <img class="card-img-top" src="../static/image/steph.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Stephanie</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="https://www.obanwhisky.com" target="_blank" class="btn btn-primary">Explore More</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card ">
+        <img class="card-img-top" src="../static/image/test.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Ewan</h5>
+          <p class="card-text">I like whisky sours and long walks to the pub.</p>
+          <a href="https://whisky.suntory.com/en/global/products/yamazaki" target="_blank" class="btn btn-primary">Explore More</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
