--- a/code/templates/data.html
+++ b/code/templates/data.html
@@ -39,7 +39,7 @@
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
         <h1>Whisky Dataset</h1>
-        <p>Enter datasource here</p>
+        <a href="https://www.whiskybase.com/whiskies/distilleries" target="_blank">Whiskybase.com Distilleries</a>
       </div>
     </div>
 
