--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -7,11 +7,12 @@
     <title>Whisky Discography</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
+<body background="../static/image/whisky09.jpg">
+  
+      <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid"> -->
           <!-- <a class="navbar-brand" href="/">WD</a> -->
-          <a class="navbar-brand" href="/">
+          <!-- <a class="navbar-brand" href="/">
             <div class="logo-image">
               <img src="../static/image/WD1.PNG" class="img-fluid">
         </div>
@@ -23,53 +24,29 @@
               <a class="nav-link" href="/explore">Explore </a>
               <a class="nav-link" href="/data">Distilleries </a>
               <a class="nav-link" href="/about">Our Picks</a>
-              
-              <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
             </div>
           </div>
         </div>
-      </nav>
+      </nav> -->
     
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
-        <h1>Whisky Discography</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
+        <h1 style="text-align:right">Whisky Discography, Making ordinary moments feel like special occasions.</h1>
+        <!-- <p>Use the interactive charts below to explore the dataset</p> -->
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-2">
-        <div class="well">
-          <h5>Distillery Country:</h5>
-          <select id="selDataset" onchange="optionChanged(this.value)"></select>
-        </div>
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h3 class="panel-title">Whisky Information by Country</h3>
-          </div>
-          <div id="sample-metadata" class="panel-body"></div>
-        </div>
-      </div>
-      <div class="col-md-12">
-        <div id="bar"></div>
-      </div>
-      <div class="col-md-5">
-        <div id="gauge"></div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div id="bubble"> Bubbe goes here </div>
-      </div>
-    </div>
+​
+    <a href="/stats"><button class="mx-auto"> Enter </button></a>
+​
   </div>
-
+​
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <!-- install lodash -->
   <!-- https://www.newline.co/@morfsys/you-should-start-using-lodash-in-2020-and-heres-why--792500b0 -->
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
   <!-- <script src="./static/js/app.js"></script> -->
-
+​
 </body>
 </html>
