--- a/code/templates/stats.html
+++ b/code/templates/stats.html
@@ -37,28 +37,26 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-2">
+      <div class="col-md-4">
         <div class="well">
           <h5>Distillery Country:</h5>
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
+        <br>
         <div class="panel panel-primary">
           <div class="panel-heading">
-            <h3 class="panel-title">Demographic Info</h3>
+            <h5 class="panel-title">Demographic Info</h5>
           </div>
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
-      <div class="col-md-12">
+      <div class="col-md-8">
         <div id="bar"></div>
-      </div>
-      <div class="col-md-5">
-        <div id="gauge"></div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
-        <div id="bubble"> Bubbe goes here </div>
+        <div id="bubble"></div>
       </div>
     </div>
   </div>
