--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -29,16 +29,19 @@
         </div>
       </nav> -->
     
-  <div class="container">
+  
     <div class="row">
-      <div class="col-md-12 jumbotron text-center">
-        <h1 style="text-align:right">Whisky Discography, Making ordinary moments feel like special occasions.</h1>
+      <div class="col-md-12 jumbotron text-right">
+        <h1 style="text-align:right; color:white; margin-right:50px">Whisky Discography</h1>
+        <h2 style="text-align:right; color:white; margin-right:50px; font-style:italic">Making ordinary moments feel like special occasions</h2>
         <!-- <p>Use the interactive charts below to explore the dataset</p> -->
       </div>
     </div>
-​
-    <a href="/stats"><button class="mx-auto"> Enter </button></a>
-​
+    <div class="container">​
+<div style= "margin:0; left:50%; text-align: center; position: absolute; top:50%">
+
+    <a href="/stats"><button class="btn btn-success btn-lg"> Enter Site </button></a>
+​</div>
   </div>
 ​
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
