--- a/code/templates/about_us.html
+++ b/code/templates/about_us.html
@@ -48,8 +48,8 @@
     <div class="container">
         <div class="row">
           <div class="col-md-12 jumbotron text-center">
-            <h1>About us</h1>
-            <p>Read about us, the Whisky Hunters! Find out what our pick for the month is</p>
+            <h1>Whiskies of the Month</h1>
+            <p>Read about us, the Whisky Hunters! Find out what our Christmas in July pick for the month is</p>
           </div>
         </div>
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -64,8 +64,8 @@
             <img src="../static/image/ms2.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Alysha's Pick</h5>
-              <p>Some works about me.</p>
-              <p>Some works about my pick.</p>
+              <p>Whisky Apprentice</p>
+              <p>For a smooth treat, drink it neat.</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -133,7 +133,7 @@
        <img class="card-img-top" src="../static/image/alysha.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Alysha</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Slip into the whisky lifestyle with a Monkey Shoulder. An affordable premium Scotch Whisky that is steeped in history and culture and to this day is still tended by hand by the experienced Malt Men of Speyside. A smooth and rich 'triple' malt Scotch that has been blended from three of Speyside's finest single malts using batches from only 27 casks to produce this fine malt whisky. Bold and lightly fantastic, for a smooth treat, drink it neat.</p>
           <a href="https://www.monkeyshoulder.com" target="_blank" class="btn btn-primary">Explore More</a>
         </div>
       </div>
