--- a/code/templates/about_us.html
+++ b/code/templates/about_us.html
@@ -160,7 +160,7 @@
     </div>
     <div class="col-sm-6">
       <div class="card ">
-        <img class="card-img-top" src="../static/image/test.jpg" alt="Card image cap">
+        <img class="card-img-top" src="../static/image/heriawan.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Ewan</h5>
           <p class="card-text">I like whisky sours and long walks to the pub.</p>
