--- a/code/templates/about_us.html
+++ b/code/templates/about_us.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whisky Discography</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link href = "./static/css/style.css" rel = "stylesheet">
 </head>
 <body>
 
@@ -24,7 +24,7 @@
         </div>
     </nav> -->
     
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
       <!-- <a class="navbar-brand" href="/">WD</a> -->
       <a class="navbar-brand" href="/">
@@ -63,33 +63,33 @@
           <div class="carousel-item active">
             <img src="../static/image/ms2.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Alysha's Pick</h5>
-              <p>Whisky Apprentice</p>
+              <h5>Alysha's Pick </h5>
+              <p>Whisky Apprentice &#129381;</p>
               <p>For a smooth treat, drink it neat.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="../static/image/ym1.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Heriewan's Pick</h5>
-              <p>Some works about me.</p>
-              <p>Some works about my pick.</p>
+              <h5>Ewan's Pick</h5>
+              <p>Whisky Appreciator &#127748;</p>
+              <p>Never cry over spilt milk. It could've been whisky.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="../static/image/craig.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Matt's Pick</h5>
-              <p>Some works about me.</p>
-              <p>Some works about my pick.</p>
+              <p>Whisky Sommelier &#129363;</p>
+              <p>Life Rule: Whisky mixes well with everything except decisions.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="../static/image/oban.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Stephanie's Pick</h5>
-              <p>Some works about me.</p>
-              <p>Some works about my pick.</p>
+              <p>Whisky Native &#129412;</p>
+              <p>OH-bin</p>
             </div>
           </div>
         </div>
@@ -143,7 +143,7 @@
         <img class="card-img-top" src="../static/image/matt.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Matt</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Craigellachie 23 Year Old Single Malt Scotch Whisky is a masterpiece in old fashioned whisky making. This 23 year old has added spice, ripe fresh cooked and dried fruits with a touch of light peat smoke on the nose. The palate is filled with flavours of melted white chocolate, baked pineapple followed by spicy oak towards the finish. It is complex, deep and well structured. An elegant Scotch Whisky that could be enjoyed neat, on the rocks or with a dash of water.</p>
           <a href="https://www.craigellachie.com/" target="_blank" class="btn btn-primary">Explore More</a>
         </div>
       </div>
@@ -153,14 +153,14 @@
         <img class="card-img-top" src="../static/image/steph.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Stephanie</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Importers and entrepreneurs, the founders of Oban distillery would have approved of the Spanish influence brought to bear with this edition’s second maturation in Montilla Fino cask wood finish.  Pours amber, rose-hued.  The nose, Outstanding. Fruity and pungent; sea salt with crushed grapes, orange zest and hints of smoke. Massively complex. The taste, Most explosive Oban ever. Soft malt then wave upon wave of delicate yet rich fruit notes on a tide of brine..  The finish, Sweetened Jamaican coffee and oak, with an attractive malt-biscuit effect as it dies down.</p>
           <a href="https://www.obanwhisky.com" target="_blank" class="btn btn-primary">Explore More</a>
         </div>
       </div>
     </div>
     <div class="col-sm-6">
       <div class="card ">
-        <img class="card-img-top" src="../static/image/test.jpg" alt="Card image cap">
+        <img class="card-img-top" src="../static/image/heriawan.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Ewan</h5>
           <p class="card-text">I like whisky sours and long walks to the pub.</p>
