--- a/code/templates/stats.html
+++ b/code/templates/stats.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whisky Discography</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href = "./static/css/style.css" rel = "stylesheet">
+    
 </head>
 <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
           <!-- <a class="navbar-brand" href="/">WD</a> -->
           <a class="navbar-brand" href="/">
@@ -67,6 +69,7 @@
   <!-- https://www.newline.co/@morfsys/you-should-start-using-lodash-in-2020-and-heres-why--792500b0 -->
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
   <script src="./static/js/app.js"></script>
+  <script src="./static/css/style.css"></script>
 
 </body>
 </html>
