--- a/code/templates/about_us.html
+++ b/code/templates/about_us.html
@@ -8,29 +8,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href = "./static/css/style.css" rel = "stylesheet">
 </head>
+
+
 <body>
 
-  <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/">WD</a>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
-              <a class="nav-link" href="/about">About Us</a>
-              <a class="nav-link" href="/data">Data </a> -->
-              <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
-            <!-- </div>
-          </div>
-        </div>
-    </nav> -->
-    
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
-      <!-- <a class="navbar-brand" href="/">WD</a> -->
       <a class="navbar-brand" href="/">
         <div class="logo-image">
           <img src="../static/image/WD1.PNG" class="img-fluid">
-    </div>
+        </div>
       </a
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
@@ -39,19 +26,20 @@
           <a class="nav-link" href="/explore">Explore </a>
           <a class="nav-link" href="/data">Distilleries </a>
           <a class="nav-link" href="/about">Our Picks</a>
-
-          <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
         </div>
       </div>
     </div>
   </nav>
+
+
     <div class="container">
         <div class="row">
           <div class="col-md-12 jumbotron text-center">
             <h1>Whiskies of the Month</h1>
-            <p>Read about us, the Whisky Hunters! Find out what our Christmas in July pick for the month is</p>
+            <p>We are the Whisky Hunters! Find out what our Christmas in July pick for the month is</p>
           </div>
         </div>
+
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -59,6 +47,7 @@
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
         </div>
+
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="../static/image/ms2.jpg" class="d-block w-100" alt="...">
@@ -68,6 +57,7 @@
               <p>For a smooth treat, drink it neat.</p>
             </div>
           </div>
+
           <div class="carousel-item">
             <img src="../static/image/ym1.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
@@ -76,6 +66,7 @@
               <p>Never cry over spilt milk. It could've been whisky.</p>
             </div>
           </div>
+
           <div class="carousel-item">
             <img src="../static/image/craig.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
@@ -84,6 +75,7 @@
               <p>Life Rule: Whisky mixes well with everything except decisions.</p>
             </div>
           </div>
+
           <div class="carousel-item">
             <img src="../static/image/oban.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
@@ -93,39 +85,18 @@
             </div>
           </div>
         </div>
+
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
+
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-    <!-- <div clas="cardcontainer">
-      <div class="row1 col-md-12">
-        <div class="card col-md-3"></div>
-          <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div>
-        <div class="card col-md-3"></div>  
-          <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div>    
-      </div>    
-    </div>   -->
+
 <div class="container">
   <div class="row">
     <div class="col-sm-6">
@@ -138,6 +109,7 @@
         </div>
       </div>
     </div>
+
     <div class="col-sm-6">
       <div class="card" >
         <img class="card-img-top" src="../static/image/matt.png" alt="Card image cap">
@@ -148,6 +120,7 @@
         </div>
       </div>
     </div>
+
     <div class="col-sm-6">
       <div class="card">
         <img class="card-img-top" src="../static/image/steph.jpg" alt="Card image cap">
@@ -158,6 +131,7 @@
         </div>
       </div>
     </div>
+
     <div class="col-sm-6">
       <div class="card ">
         <img class="card-img-top" src="../static/image/heriawan.jpg" alt="Card image cap">
@@ -168,8 +142,10 @@
         </div>
       </div>
     </div>
+
   </div>
 </div>
+
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
