amended stats.html

--- a/code/templates/stats.html
+++ b/code/templates/stats.html
@@ -45,7 +45,7 @@
         <br>
         <div class="panel panel-primary">
           <div class="panel-heading">
-            <h5 class="panel-title">Demographic Info</h5>
+            <h5 class="panel-title">Country Distillery Info</h5>
           </div>
           <div id="sample-metadata" class="panel-body"></div>
         </div>
